# CppProject

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  README.md  build.bat  build.sh  conanfile.txt  init.bat  init.sh  run.bat  run.sh  test.bat  test.sh
.github/workflows/: cmake.yml
env/: call-sh.bat  conan.cmake  conan_build_tool.cmake  emscripten.cmake  emscripten.profile
src/: Dummy.cpp  Dummy.h  Main.cpp  make_unique.h
src/cli/: main.cpp
tests/: DummyTest.cpp  dummy_test.cpp
